--- a/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
@@ -24,4 +24,5 @@
     <converter:HearderSelectAllVisibilityConverter x:Key="HearderSelectAllVisibilityConverter"/>
     <converter:BorderCircularConverter x:Key="BorderCircularConverter"/>
     <converter:String2BrushConverter x:Key="String2BrushConverter"/>
+    <converter:TreeViewItemMarginConverter x:Key="TreeViewItemMarginConverter"/>
 </ResourceDictionary>
