--- a/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
@@ -44,5 +44,6 @@
         <ResourceDictionary Source="TabControl.xaml"/>
         <ResourceDictionary Source="Badge.xaml"/>
         <ResourceDictionary Source="StepBar.xaml"/>
+        <ResourceDictionary Source="TreeView.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
