--- a/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
@@ -45,5 +45,6 @@
         <ResourceDictionary Source="Badge.xaml"/>
         <ResourceDictionary Source="StepBar.xaml"/>
         <ResourceDictionary Source="TreeView.xaml"/>
+        <ResourceDictionary Source="ContentComboBox.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
